# tests

./: LICENSE  README.md  rm-all-exes  rm-exes
apl/: .apl.history  mat_solve_1.apl  readme  session1  test.apl
awk/: combine_two_lines.awk  diff_first.awk  makefile  run  sqrts.awk  str_double.awk  sum_first.awk  wtf_loat.awk
bc/: euler_fact.bc  phi_scale.bc  wtf_float_works.bc
blender/: README.md  spheres1.py
c/: _build  crash  goto  goto.c  hello  hello.c  makefile  malloc_fail  malloc_fail.c  newton_roots  newton_roots.c  notpi  notpi.c~  numero  numero.c  opt_test_1  opt_test_1.c  opt_test_2  opt_test_2.c  pi_1  pi_1.c  pi_2  pi_2.c  pi_3  pi_3.c  pi_4  pi_4.c  poll_stdin  poll_stdin.c  print_utf8  print_utf8.c  printf  printf.c  sbd  sbd.c  sizeof_array  sizeof_array.c  sqrt2_plain  sqrt2_plain.c  tags  (+6 more)
clisp/: add.lisp  add_let.lisp  cl-sdl2-basic.lisp  wtf_loat.lisp
cmake/cm_1/: CMakeLists.txt  cm_1.cxx  cm_1_conf.h.in
dc/: wtf_float_works.dc
fortran/: alloc_1.f95  array_1b.f95  array_2b.f95  circle.f95  elem_1.f95  makefile  module_1.f95  module_1_driver.f95  pi_2.f95
freebasic/: hello.bas  makefile  pi_2.bas  squares_func.bas  winsane.bas  wtf_loat.bas  wtf_loat2.bas
gp/: euler_fact.gp  fib_digs.gp  fsolve.gp  phi_1.gp  pi_intnum.gp  plot_1.gp  plot_2.gp  saddle_test.gp  solve_1.gp
html/: bookmarks.html  bookmarks_display.js  bookmarks_list.js  mathjax1.html  mathml_test1.xml  org_test1.html  org_test1.org  testmd.html  testmd.md
java/: makefile.base  rm-all-classes  rm-all-jars
js/: compose.js  compose2.js  fib_l.js  globals.js  obj_1.js  (+5 more)
(+305 files in other folders)
